Fix alignment issue in about section

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,10 +82,6 @@ h1.display-1 {
 
 /* PORTFOLIO SECTION */
 
-.works-grid.work-grid-gut {
-	/* margin: 0 0 0 116px; */
-}
-
 .works-filter a.active {
 	color: #FFC92C;
 	font-weight: 500;
@@ -97,14 +93,6 @@ h1.display-1 {
 .portfolio-section {
 	padding: 0;
 }
-/* .portfolio-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0;
-	margin: 0 0 20px 0;
-} */
 .portfolio-card {
 	display: flex;
 	flex-direction: column;
@@ -148,7 +136,6 @@ h1.display-1 {
 	color: #FFC92C;
 }
 .main-nav.dark .inner-nav ul>li>a {
-	/* color: rgba(255,255,255, .7); */
 	color: #fff;
 }
 .mobile-nav {
@@ -224,6 +211,16 @@ h1.display-1 {
 	padding: 50px 0 13px 0;
 }
 
+.about-section {
+	margin: 0 auto;
+	text-align: center;
+}
+.fa:hover {
+	color: #FFC92C;
+	transition: all .3s ease-in-out;
+}
+
+
 @media only screen and (max-width: 767px) {
 	.works-filter a {
 		padding-left: 10px;
@@ -235,25 +232,27 @@ h1.display-1 {
 }
 
 @media only screen and (min-width: 768px ) and (max-width: 1198px) {
-
-		.portfolio-card {
-			display: flex;
-			flex-direction: column;
-			justify-content: space-around;
-			box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.13);
-			-webkit-box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.13);
-			height: 450px;
-			width: 375px;
-			margin: 0;
-			background: #fff;
-		}
-		.portfolio-card-img {
-			width: 100%;
-			height: 40%;
-			background: #fff;
-		}
-		.portfolio-btn-group {
-			margin: 85px auto 0px auto;
-			padding: 0px 0 0px 0;
-		}
+	.portfolio-card {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.13);
+		-webkit-box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.13);
+		height: 450px;
+		width: 375px;
+		margin: 0;
+		background: #fff;
+	}
+	.portfolio-card-img {
+		width: 100%;
+		height: 40%;
+		background: #fff;
+	}
+	.portfolio-btn-group {
+		margin: 85px auto 0px auto;
+		padding: 0px 0 0px 0;
+	}
+	.about-section {
+		margin: 0 auto;
+	}
 }
